tests/baselines/reference/privateIndexer2.errors.txt
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts(4,15): error TS1005: ']' expected.
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts(4,17): error TS2552: Cannot find name 'string'. Did you mean 'String'?
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts(4,23): error TS1005: ',' expected.
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts(4,24): error TS1136: Property assignment expected.
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts(4,32): error TS1005: ':' expected.


==== tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts (5 errors) ====
    // private indexers not allowed
    
    var x = {
        private [x: string]: string;
                  ~
!!! error TS1005: ']' expected.
                    ~~~~~~
!!! error TS2552: Cannot find name 'string'. Did you mean 'String'?
                          ~
!!! error TS1005: ',' expected.
                           ~
!!! error TS1136: Property assignment expected.
                                   ~
!!! error TS1005: ':' expected.
    }
    
    var y: {
        private[x: string]: string;
    }